# twin-layer-brain-template

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .rumdl.toml  .yamlignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  README.md  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml
.agents/skills/ingest/: SKILL.md
.agents/skills/query/: SKILL.md
.agents/skills/sublime/: SKILL.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: shellcheck.yml  uv-qualify.yml
.obsidian/: app.json  community-plugins.json  core-plugins.json
chrome-extension/: manifest.json  popup.html  popup.js
compiler/: cli.py  config.py  embedding.py  env.py  frontmatter.py  indexer.py  key_check.py  models.py  paths.py  search.py  status.py
deploy/: Caddyfile  brain.service  local.brain.plist  local.second-brain.plist  second-brain.service  setup.sh
development/: README.md  architecture.md
docs/: README.md  chrome-extension.md  environment.md  http-api.md  instance-setup.md  knowledge-ingest.md  mcp.md  mise-tasks.md  search.md  server-management.md  template-operation.md  wiki-operations.md
mise/tasks/: clone-repo.sh  common.sh  copy-from-template.sh  diff-template.sh  format.sh  initialize.sh  kc.sh  lint.sh  reset-token.sh  scaffold-brain.sh  serve-install.sh  serve-launchd-install.sh  serve-launchd-logs.sh  serve-launchd-restart.sh  serve-launchd-status.sh  serve-launchd-uninstall.sh  serve-logs.sh  serve-restart.sh  serve-status.sh  serve-systemd-install.sh  serve-systemd-logs.sh  serve-systemd-restart.sh  serve-systemd-status.sh  serve-systemd-uninstall.sh  serve-uninstall.sh  setup-ca-bundle.sh  skills.sh  update-repos.sh
raw/articles/: 2026-04-04-karpathy-llm-wiki.md
server/: app.py  auth.py  llm.py  mcp_auth.py  mcp_server.py  mcp_stdio.py  run.py
server/routes/: auth_check.py  clip.py  index.py  notes.py  sync.py
tests/: test_auth_check.py  test_clip.py  test_env.py  test_frontmatter.py  test_key_check.py  test_mcp_auth.py  test_search.py  test_status.py
(+13 files in other folders)
