[project]
name = "twin-layer-brain"
version = "0.1.0"
description = "Twin-layer brain template: SQLite fast search (Layer 1) + LLM self-expanding wiki (Layer 2)"
requires-python = ">=3.12"
dependencies = [
  "python-frontmatter>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "mcp>=1.0",
  "httpx>=0.27",
  "openai>=1.0",
  "sqlite-vec>=0.1",
  "truststore>=0.10",
]

[project.scripts]
kc = "compiler.cli:main"

[dependency-groups]
dev = ["ruff", "mypy", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compiler", "server"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["frontmatter", "sqlite_vec", "PIL", "truststore"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
